<resources>
    <string name="app_name">The PRANKS</string>
    <string name="title_activity_patient_dashboard">PatientDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_feedback">Feedback</string>


    <string name="menu_patient_profile">Your Profile</string>
    <string name="menu_patient_appointment">Active appointments</string>
    <string name="menu_patient_previous_transactions">Previous transactions</string>
    <string name="menu_patient_previous_appointments">Previous appointments</string>
    <string name="menu_patient_settings">Settings</string>
    <string name="menu_patient_app_info">About</string>


    <string name="menu_doctor_appointment">Active appointments</string>
    <string name="menu_doctor_profile">Your Profile</string>
    <string name="menu_doctor_history">History</string>
    <string name="menu_doctor_logout">Logout</string>
    <string name="menu_doctor_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="feedback_mail_ID">navin.cs18@nitp.ac.in</string>


</resources>